make adaptive for middle page

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
                             <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
                         </button>
                     </div>
+                    <img src="img/media/icon/hum-menu.svg" alt="Hum menu" class="header__hum">
                 </div>
             </nav>
 
@@ -61,6 +62,7 @@
                     </button>
                 </div>
                 <img src="img/sections-img/header.png" alt="Promo image" class="promo__img">
+                <img src="img/media/section-img/promo-img.png" alt="Promo image" class="promo__img-middle">
             </div>
         </div>
     </header>
@@ -69,8 +71,9 @@
         <div class="container">
             <div class="work-managment__block project">
                 <div class="work-managment__block__txt">
-                    <h2 class="title">Project Management</h2>
-                    <img src="img/decoration-line/line-project.svg" alt="Line header" class="work-managment__block__txt__line project-line">
+                    <h2 class="title">Project <br> Management</h2>
+                    <img src="img/decoration-line/line-project.svg" alt="Line project" class="work-managment__block__txt__line project-line">
+                    <img src="img/media/line-decor/manage-line.svg" alt="Line project" class="work-managment__block__txt__line-middle project-line-middle">
                     <p class="body-text">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams
                         directly from the app. Take
                         photos with the mobile app and save them to a note.</p>
@@ -80,12 +83,16 @@
                     </button>
                 </div>
                 <img src="img/sections-img/project.png" alt="Men" class="work-managment__block__img">
+                <img src="img/media/section-img/project-img.png" alt="Men" class="work-managment__block__img-middle">
             </div>
             <div class="work-managment__block together">
                 <img src="img/sections-img/together.svg" alt="Together" class="work-managment__block__img">
+                <img src="img/media/section-img/together-img.svg" alt="Together" class="work-managment__block__img-middle">
                 <div class="work-managment__block__txt">
                     <h2 class="title">Work together</h2>
-                    <img src="img/decoration-line/line-together.svg" alt="Line header" class="work-managment__block__txt__line together-line">
+                    <img src="img/decoration-line/line-together.svg" alt="Line together" class="work-managment__block__txt__line together-line">
+                    <img src="img/media/line-decor/together.svg" alt="Line together"
+                    class="work-managment__block__txt__line-middle together-line-middle">
                     <p class="body-text">With whitepace, share your notes with your colleagues and collaborate on them.
                     You can also publish a note to the internet and share the URL with others.</p>
                     <button class="btn">
@@ -101,7 +108,8 @@
         <div class="container">
             <div class="extension__txt">
                 <h2 class="title">Use as Extension</h2>
-                <img src="img/decoration-line/extens-line.svg" alt="Line header" class="extension__line">
+                <img src="img/decoration-line/extens-line.svg" alt="Line extension" class="extension__line">
+                <img src="img/media/line-decor/extens-line.svg" alt="Line extension" class="extension__line-middle">
                 <p class="body-text">Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
                 <button class="btn">
                     Let’s Go
@@ -109,15 +117,18 @@
                 </button>
             </div>
             <img src="img/sections-img/extension.png" alt="Men" class="extension__img">
+            <img src="img/sections-img/extension.png" alt="Men" class="extension__img-middle">
         </div>
     </section>
 
     <section class="customize">
         <div class="container">
             <img src="img/sections-img/custom.png" alt="Customize" class="customize__img">
+            <img src="img/sections-img/custom.png" alt="Customize" class="customize__img-middle">
             <div class="customize__txt">
-                <h2 class="title">Customise it to <br> your needs</h2>
-                <img src="img/decoration-line/custom-line.svg" alt="Line header" class="customize__line">
+                <h2 class="title">Customise it to your needs</h2>
+                <img src="img/decoration-line/custom-line.svg" alt="Line customize" class="customize__line">
+                <img src="img/media/line-decor/custom-line.svg" alt="Line customize" class="customize__line-middle">
                 <p class="body-text">Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
                 <button class="btn">
                     Let’s Go
@@ -258,6 +269,7 @@
             <div class="data__txt">
                 <h2 class="title">100% your data</h2>
                 <img src="img/decoration-line/data-line.svg" alt="Line data" class="data__line">
+                <img src="img/media/line-decor/data-line.svg" alt="Line data" class="data__line-middle">
                 <p class="body-text">Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
                 <button class="btn">
                     Read more
@@ -265,6 +277,7 @@
                 </button>
             </div>
             <img src="img/sections-img/data-img.svg" alt="Data" class="data__img">
+            <img src="img/media/section-img/data-img.svg" alt="Data" class="data__img-middle">
         </div>
     </section>
 
