responsive site layout for small screen

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="work-managment__block project">
                 <div class="work-managment__block__txt">
-                    <h2 class="title">Project <br> Management</h2>
+                    <h2 class="title">Project Management</h2>
                     <img src="img/decoration-line/line-project.svg" alt="Line project" class="work-managment__block__txt__line project-line">
                     <img src="img/media/line-decor/manage-line.svg" alt="Line project" class="work-managment__block__txt__line-middle project-line-middle">
                     <p class="body-text">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams
@@ -100,6 +100,7 @@
                         <img src="img/icon/right-arrow.svg" alt="Right arrow" class="btn__arrow">
                     </button>
                 </div>
+                <img src="img/media/768px/together_img.svg" alt="Together" class="work-managment__block__img-small">
             </div>
         </div>
     </section>
@@ -143,7 +144,7 @@
             <div class="plan__txt">
                 <h2 class="title">Choose Your Plan</h2>
                 <img src="img/decoration-line/plan-line.svg" alt="Line" class="plan-line">
-                <p class="body-text">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has <br> the right plan for you.</p>
+                <p class="body-text">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
             </div>
             <div class="plan__price">
                 <div class="plan__price__item">
@@ -266,6 +267,7 @@
 
     <section class="data">
         <div class="container">
+            <img src="img/media/section-img/data-img.svg" alt="Data" class="data__img-small">
             <div class="data__txt">
                 <h2 class="title">100% your data</h2>
                 <img src="img/decoration-line/data-line.svg" alt="Line data" class="data__line">
